--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ quote
 telethon>=1.28.5
 #https://github.com/New-dev0/Telethon/archive/Aurium.zip
 html_telegraph_poster
+Flask==2.2.2
+gunicorn==20.1.0
